Added a new DL project and an explanatory image of python axes

--- a/BackToBasicsWithNumPyNeuralNetworks.ipynb
+++ b/BackToBasicsWithNumPyNeuralNetworks.ipynb
@@ -243,7 +243,7 @@
    "id": "8c7125c7",
    "metadata": {},
    "source": [
-    "To gain a deeper understanding of how the softmax equation within the 'forward()' function operates and how the 'for' loop within the 'loss()' function systematically extracts predicted values for the expected class, please refer to the notebook. "
+    "To gain a deeper understanding of how the softmax equation within the 'forward()' function operates and how the 'for' loop within the 'loss()' function systematically extracts predicted values for the expected class, please refer to the notebook. [click here](https://github.com/Ifthekher237/DeepLearning-Projects/blob/main/Understanding%20Softmax%20and%20Loss%20Calculation%20in%20Neural%20Networks.ipynb) "
    ]
   },
   {
